--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,6 @@ body {
   overflow-x: hidden;
   position: relative;
   max-width: 100vw;
+  margin-top: 8rem;
+  max-width: 100vw;
 }
